@@ -524,7 +524,7 @@ typedef struct _CPyMOL {
   ov_word lex_ignore_case;
   ov_word lex_presentation_auto_quit;
   ov_word lex_editor_auto_dihedral;
-
+  ov_word lex_presentation_auto_start;
 } _CPyMOL;
 
 static int status_ok(int ok) {
@@ -1043,7 +1043,7 @@ static OVstatus PyMOL_InitAPI(CPyMOL *I)
   LEX_SETTING(ignore_case,414);
   LEX_SETTING(presentation_auto_quit,415);
   LEX_SETTING(editor_auto_dihedral,416);
-
+  LEX_SETTING(presentation_auto_start,417);
   return_OVstatus_SUCCESS;
 }
 
